# Formal_first_practic

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
libs/: CMakeLists.txt  Determinization.cpp  Determinization.h  First_practic.cpp  First_practic.h  Make_one_letter_moves.cpp  Make_one_letter_moves.h  Minimization.cpp  Minimization.h  My_bitset.cpp  My_bitset.h  Reg_expr_to_state_machine.cpp  Reg_expr_to_state_machine.h  State_machine.cpp  State_machine.h
